server/k8s/base.yml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-imaging-access
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reference
  namespace: smart-imaging-access
spec:
  selector:
    matchLabels:
      app: reference
  replicas: 1
  template:
    metadata:
      namespace: smart-imaging-access
      labels:
        app: reference
    spec:
      volumes:
      - name: viewer-config
        configMap:
          name: viewer-config
          optional: true
      containers:
      - name: proxy
        image: ghcr.io/jmandel/smart-imaging-proxy:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "75m"
        volumeMounts:
        - name: viewer-config
          mountPath: /app/public/viewer/config
          readOnly: true
        ports:
        - containerPort: 8000
          name: proxy
        - containerPort: 30104
          name: dicom-storescu
        args:
        - /bin/bash
        - -c
        - >
          deno run $LOCAL_STACK_CONFIG --allow-all src/index.ts;
      - name: sample-loader
        image: ghcr.io/jmandel/smart-imaging-proxy:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "128Mi"
            cpu: "125m"
        args:
        - /bin/bash
        - -c
        - >
          cd examples;
          deno run --allow-all load-examples.ts --wait-for-dicom-server;
          sleep infinity;
---
apiVersion: v1
kind: Service
metadata:
  name: reference
  namespace: smart-imaging-access
spec:
  selector:
    app: reference
  ports:
  - name: proxy
    protocol: TCP
    port: 8000
    targetPort: proxy
  - name: dicom-storescu
    protocol: TCP
    port: 30104
    targetPort: dicom-storescu
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: launcher
  namespace: smart-imaging-access
spec:
  selector:
    matchLabels:
      app: launcher
  replicas: 1
  template:
    metadata:
      namespace: smart-imaging-access
      labels:
        app: launcher
    spec:
      containers:
      - name: launcher
        image: ghcr.io/jmandel/smart-launcher-v2:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "75m"
        ports:
        - containerPort: 80
          name: launcher-web
---
apiVersion: v1
kind: Service
metadata:
  name: launcher
  namespace: smart-imaging-access
spec:
  selector:
    app: launcher
  ports:
  - name: launcher
    protocol: TCP
    port: 80
    targetPort: launcher-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc
  namespace: smart-imaging-access
spec:
  selector:
    matchLabels:
      app: orthanc
  replicas: 1
  template:
    metadata:
      namespace: smart-imaging-access
      labels:
        app: orthanc
    spec:
      volumes:
      - configMap:
          name: orthanc-config
        name: orthanc-config-volume
      containers:
      - name: orthanc
        image: orthancteam/orthanc:26.6.0-full
        resources:
          requests:
            memory: "128Mi"
            cpu: "125m"
        volumeMounts:
        - name: orthanc-config-volume
          subPath: config.json
          mountPath: /etc/orthanc/orthanc.json
        ports:
        - containerPort: 8042
          name: orthanc-web
        - containerPort: 4242
          name: orthanc-dimse
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc
  namespace: smart-imaging-access
spec:
  type: NodePort
  selector:
    app: orthanc
  ports:
  - name: orthanc-web
    protocol: TCP
    port: 8042
    targetPort: orthanc-web
  - name: orthanc-dimse
    protocol: TCP
    port: 4242
    targetPort: orthanc-dimse
    nodePort: 30042
