server/k8s/minikube.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: smart-imaging-access
  name: launcher
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - launcher.imaging-local.argo.run
    secretName: imaging-local-tls
  rules:
    - host: launcher.imaging-local.argo.run
      http:
        paths:
          - path: "/($)?(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: launcher
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: smart-imaging-access
  name: reference
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - imaging-local.argo.run
    secretName: imaging-local-tls
  rules:
    - host: imaging-local.argo.run
      http:
        paths:
          - path: "/orthanc(/|$)?(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: orthanc
                port:
                  number: 8042
          - path: "/($)?(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: reference
                port:
                  number: 8000
