server/k8s/server.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: smart-imaging-access
  name: reference
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - imaging.argo.run
    secretName: tls-secret
  rules:
    - host: imaging.argo.run
      http:
        paths:
          - path: "/orthanc(/|$)?(.*)"
            pathType: Prefix
            backend:
              service:
                name: orthanc
                port:
                  number: 8042
          - path: "/($)?(.*)"
            pathType: Prefix
            backend:
              service:
                name: reference
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: smart-imaging-access
  name: launcher
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - launcher.imaging.argo.run
    secretName: tls-secret-launcher
  rules:
    - host: launcher.imaging.argo.run
      http:
        paths:
          - path: "/($)?(.*)"
            pathType: Prefix
            backend:
              service:
                name: launcher
                port:
                  number: 80
